--- a/Minigin/Minigin.vcxproj.filters
+++ b/Minigin/Minigin.vcxproj.filters
@@ -63,6 +63,12 @@
     <ClInclude Include="FontRenderer.h">
       <Filter>Source Files\Components</Filter>
     </ClInclude>
+    <ClInclude Include="FPSCounter.h">
+      <Filter>Source Files\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="Color.h">
+      <Filter>Source Files\Components</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ResourceManager.cpp">
@@ -105,6 +111,12 @@
       <Filter>Header Files</Filter>
     </ClCompile>
     <ClCompile Include="FontRenderer.cpp">
+      <Filter>Source Files\Components</Filter>
+    </ClCompile>
+    <ClCompile Include="FPSCounter.cpp">
+      <Filter>Source Files\Components</Filter>
+    </ClCompile>
+    <ClCompile Include="Color.cpp">
       <Filter>Source Files\Components</Filter>
     </ClCompile>
   </ItemGroup>
