--- a/Minigin/Minigin.vcxproj.filters
+++ b/Minigin/Minigin.vcxproj.filters
@@ -13,9 +13,6 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="Source Files\Components">
-      <UniqueIdentifier>{f2c90cb1-e347-44a8-a377-21eb54665e5c}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Source Files\Objects">
       <UniqueIdentifier>{d91df7b1-0a25-4e36-adb8-90bbdfdffec1}</UniqueIdentifier>
     </Filter>
@@ -27,9 +24,6 @@
     </Filter>
     <Filter Include="Header Files\ImGui">
       <UniqueIdentifier>{16bd2a46-83eb-467a-be1c-fd6a72abc95b}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Components\Exercise">
-      <UniqueIdentifier>{a9d7a335-afaf-4fa4-a395-72ae97108d8d}</UniqueIdentifier>
     </Filter>
     <Filter Include="Source Files\Command">
       <UniqueIdentifier>{ff8334b8-9c12-4bee-b5ee-a62a21d9cf72}</UniqueIdentifier>
@@ -46,6 +40,12 @@
     <Filter Include="Source Files\Scenes">
       <UniqueIdentifier>{4d6dbacc-cbde-4f12-a274-56f6f3081246}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Resource Files\Components">
+      <UniqueIdentifier>{f2c90cb1-e347-44a8-a377-21eb54665e5c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Resource Files\Components\Exercise">
+      <UniqueIdentifier>{a9d7a335-afaf-4fa4-a395-72ae97108d8d}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Renderer.h">
@@ -58,10 +58,10 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="TextureRenderer.h">
-      <Filter>Source Files\Components</Filter>
+      <Filter>Resource Files\Components</Filter>
     </ClInclude>
     <ClInclude Include="Transform.h">
-      <Filter>Source Files\Components</Filter>
+      <Filter>Resource Files\Components</Filter>
     </ClInclude>
     <ClInclude Include="GameObject.h">
       <Filter>Source Files\Objects</Filter>
@@ -70,13 +70,13 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="FontRenderer.h">
-      <Filter>Source Files\Components</Filter>
+      <Filter>Resource Files\Components</Filter>
     </ClInclude>
     <ClInclude Include="FPSCounter.h">
-      <Filter>Source Files\Components</Filter>
+      <Filter>Resource Files\Components</Filter>
     </ClInclude>
     <ClInclude Include="Color.h">
-      <Filter>Source Files\Components</Filter>
+      <Filter>Resource Files\Components</Filter>
     </ClInclude>
     <ClInclude Include="Singleton.h">
       <Filter>Source Files\Singletons</Filter>
@@ -115,19 +115,19 @@
       <Filter>Header Files\ImGui</Filter>
     </ClInclude>
     <ClInclude Include="Component.h">
-      <Filter>Source Files\Components</Filter>
+      <Filter>Resource Files\Components</Filter>
     </ClInclude>
     <ClInclude Include="CacheTestComponent.h">
-      <Filter>Source Files\Components</Filter>
+      <Filter>Resource Files\Components</Filter>
     </ClInclude>
     <ClInclude Include="TransformEx.h">
-      <Filter>Source Files\Components\Exercise</Filter>
+      <Filter>Resource Files\Components\Exercise</Filter>
     </ClInclude>
     <ClInclude Include="GameObjectEx.h">
-      <Filter>Source Files\Components\Exercise</Filter>
+      <Filter>Resource Files\Components\Exercise</Filter>
     </ClInclude>
     <ClInclude Include="GameObjectAltEx.h">
-      <Filter>Source Files\Components\Exercise</Filter>
+      <Filter>Resource Files\Components\Exercise</Filter>
     </ClInclude>
     <ClInclude Include="Texture2D.h">
       <Filter>Header Files</Filter>
@@ -159,6 +159,9 @@
     <ClInclude Include="SceneManager.h">
       <Filter>Source Files\Scenes</Filter>
     </ClInclude>
+    <ClInclude Include="SpriteRenderer.h">
+      <Filter>Resource Files\Components</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Renderer.cpp">
@@ -177,22 +180,22 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="TextureRenderer.cpp">
-      <Filter>Source Files\Components</Filter>
+      <Filter>Resource Files\Components</Filter>
     </ClCompile>
     <ClCompile Include="Transform.cpp">
-      <Filter>Source Files\Components</Filter>
+      <Filter>Resource Files\Components</Filter>
     </ClCompile>
     <ClCompile Include="GameObject.cpp">
       <Filter>Source Files\Objects</Filter>
     </ClCompile>
     <ClCompile Include="FontRenderer.cpp">
-      <Filter>Source Files\Components</Filter>
+      <Filter>Resource Files\Components</Filter>
     </ClCompile>
     <ClCompile Include="FPSCounter.cpp">
-      <Filter>Source Files\Components</Filter>
+      <Filter>Resource Files\Components</Filter>
     </ClCompile>
     <ClCompile Include="Color.cpp">
-      <Filter>Source Files\Components</Filter>
+      <Filter>Resource Files\Components</Filter>
     </ClCompile>
     <ClCompile Include="ResourceManager.cpp">
       <Filter>Source Files\Singletons</Filter>
@@ -225,19 +228,19 @@
       <Filter>Source Files\ImGui</Filter>
     </ClCompile>
     <ClCompile Include="Component.cpp">
-      <Filter>Source Files\Components</Filter>
+      <Filter>Resource Files\Components</Filter>
     </ClCompile>
     <ClCompile Include="CacheTestComponent.cpp">
-      <Filter>Source Files\Components</Filter>
+      <Filter>Resource Files\Components</Filter>
     </ClCompile>
     <ClCompile Include="TransformEx.cpp">
-      <Filter>Source Files\Components\Exercise</Filter>
+      <Filter>Resource Files\Components\Exercise</Filter>
     </ClCompile>
     <ClCompile Include="GameObjectEx.cpp">
-      <Filter>Source Files\Components\Exercise</Filter>
+      <Filter>Resource Files\Components\Exercise</Filter>
     </ClCompile>
     <ClCompile Include="GameObjectAltEx.cpp">
-      <Filter>Source Files\Components\Exercise</Filter>
+      <Filter>Resource Files\Components\Exercise</Filter>
     </ClCompile>
     <ClCompile Include="Font.cpp">
       <Filter>Source Files</Filter>
@@ -262,6 +265,9 @@
     </ClCompile>
     <ClCompile Include="TestScene.cpp">
       <Filter>Source Files\Scenes</Filter>
+    </ClCompile>
+    <ClCompile Include="SpriteRenderer.cpp">
+      <Filter>Resource Files\Components</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
